traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:5: error: not found: value getMondeHargeur
    if (getY()!=getMondeHargeur()-1){
                ^TraversalByColumn:6: error: not found: value get
      setPos(get(X),get(Y)+1)
             ^TraversalByColumn:6: error: not found: value X
      setPos(get(X),get(Y)+1)
                 ^TraversalByColumn:6: error: not found: value get
      setPos(get(X),get(Y)+1)
                    ^TraversalByColumn:6: error: not found: value Y
      setPos(get(X),get(Y)+1)
                        ^TraversalByColumn:8: error: not found: value get
      setPos(get(X)+1,0)
             ^TraversalByColumn:8: error: not found: value X
      setPos(get(X)+1,0)
                 ^