traversal.column.traversalbycolumn.TraversalByColumn.scala.code
override def run() {
  var cpt = 0
  do {
    cpt += 1
    ecritMessage(cpt)
    if (getY()!=getMondeHargeur()-1){
      setPos(get(X),get(Y)+1)
    } else {
      setPos(get(X)+1,0)
    }
  }  while ((getX()!=getMondeLargeur()) && (getY()!=getMondeHauteur()))
}